responsive (fonts, line high), horizontal scroll fixes, and animation breakpoint

--- a/assets/styles/animations.css
+++ b/assets/styles/animations.css
@@ -15,8 +15,8 @@
 }
 
 .d-point--2 {
-  top: 40%;
-  left: 30%;
+  top: 43%;
+  left: 35%;
 }
 
 .d-point--3 {
@@ -65,6 +65,10 @@
 }
 
 @media screen and (max-width: 1500px) {
+  .d-point--2 {
+    top: 55%;
+    left: 50%;
+  }
   .d-point--3,
   .d-point--4 {
     right: 0;
